# src/main/java/biz/turnonline/ecosystem/steward/model/DeputyAccount.java
@@ -12,14 +12,14 @@
 /*
  * This code was generated by https://github.com/google/apis-client-generator/
  * (build: 2018-10-08 17:45:39 UTC)
- * on 2020-04-29 at 04:30:47 UTC
+ * on 2020-09-06 at 09:23:01 UTC
  * Modify at your own risk.
  */
 
 package biz.turnonline.ecosystem.steward.model;
 
 /**
- * Model definition for SubAccount.
+ * Model definition for DeputyAccount.
  *
  * <p> This is the Java data model class that specifies how to parse/serialize into the JSON that is
  * transmitted over HTTP when working with the TurnOnline.biz Account Steward. For a detailed
@@ -30,7 +30,7 @@ package biz.turnonline.ecosystem.steward.model;
  * @author Google, Inc.
  */
 @SuppressWarnings( "javadoc" )
-public final class SubAccount
+public final class DeputyAccount
         extends com.google.api.client.json.GenericJson
 {
 
@@ -93,7 +93,7 @@ public final class SubAccount
     /**
      * @param email email or {@code null} for none
      */
-    public SubAccount setEmail( java.lang.String email )
+    public DeputyAccount setEmail( java.lang.String email )
     {
         this.email = email;
         return this;
@@ -110,7 +110,7 @@ public final class SubAccount
     /**
      * @param firstName firstName or {@code null} for none
      */
-    public SubAccount setFirstName( java.lang.String firstName )
+    public DeputyAccount setFirstName( java.lang.String firstName )
     {
         this.firstName = firstName;
         return this;
@@ -127,7 +127,7 @@ public final class SubAccount
     /**
      * @param lastName lastName or {@code null} for none
      */
-    public SubAccount setLastName( java.lang.String lastName )
+    public DeputyAccount setLastName( java.lang.String lastName )
     {
         this.lastName = lastName;
         return this;
@@ -144,7 +144,7 @@ public final class SubAccount
     /**
      * @param locale locale or {@code null} for none
      */
-    public SubAccount setLocale( java.lang.String locale )
+    public DeputyAccount setLocale( java.lang.String locale )
     {
         this.locale = locale;
         return this;
@@ -161,7 +161,7 @@ public final class SubAccount
     /**
      * @param middleName middleName or {@code null} for none
      */
-    public SubAccount setMiddleName( java.lang.String middleName )
+    public DeputyAccount setMiddleName( java.lang.String middleName )
     {
         this.middleName = middleName;
         return this;
@@ -178,7 +178,7 @@ public final class SubAccount
     /**
      * @param prefix prefix or {@code null} for none
      */
-    public SubAccount setPrefix( java.lang.String prefix )
+    public DeputyAccount setPrefix( java.lang.String prefix )
     {
         this.prefix = prefix;
         return this;
@@ -195,7 +195,7 @@ public final class SubAccount
     /**
      * @param role role or {@code null} for none
      */
-    public SubAccount setRole( java.lang.String role )
+    public DeputyAccount setRole( java.lang.String role )
     {
         this.role = role;
         return this;
@@ -212,22 +212,22 @@ public final class SubAccount
     /**
      * @param suffix suffix or {@code null} for none
      */
-    public SubAccount setSuffix( java.lang.String suffix )
+    public DeputyAccount setSuffix( java.lang.String suffix )
     {
         this.suffix = suffix;
         return this;
     }
 
     @Override
-    public SubAccount set( String fieldName, Object value )
+    public DeputyAccount set( String fieldName, Object value )
     {
-        return ( SubAccount ) super.set( fieldName, value );
+        return ( DeputyAccount ) super.set( fieldName, value );
     }
 
     @Override
-    public SubAccount clone()
+    public DeputyAccount clone()
     {
-        return ( SubAccount ) super.clone();
+        return ( DeputyAccount ) super.clone();
     }
 
 }
