# src/main/java/biz/turnonline/ecosystem/steward/model/DeputyAccountCollection.java
@@ -12,14 +12,14 @@
 /*
  * This code was generated by https://github.com/google/apis-client-generator/
  * (build: 2018-10-08 17:45:39 UTC)
- * on 2020-04-29 at 04:30:47 UTC
+ * on 2020-09-06 at 09:23:01 UTC
  * Modify at your own risk.
  */
 
 package biz.turnonline.ecosystem.steward.model;
 
 /**
- * Model definition for SubAccountCollection.
+ * Model definition for DeputyAccountCollection.
  *
  * <p> This is the Java data model class that specifies how to parse/serialize into the JSON that is
  * transmitted over HTTP when working with the TurnOnline.biz Account Steward. For a detailed
@@ -30,7 +30,7 @@ package biz.turnonline.ecosystem.steward.model;
  * @author Google, Inc.
  */
 @SuppressWarnings( "javadoc" )
-public final class SubAccountCollection
+public final class DeputyAccountCollection
         extends com.google.api.client.json.GenericJson
 {
 
@@ -38,12 +38,12 @@ public final class SubAccountCollection
      * The value may be {@code null}.
      */
     @com.google.api.client.util.Key
-    private java.util.List<SubAccount> items;
+    private java.util.List<DeputyAccount> items;
 
     /**
      * @return value or {@code null} for none
      */
-    public java.util.List<SubAccount> getItems()
+    public java.util.List<DeputyAccount> getItems()
     {
         return items;
     }
@@ -51,22 +51,22 @@ public final class SubAccountCollection
     /**
      * @param items items or {@code null} for none
      */
-    public SubAccountCollection setItems( java.util.List<SubAccount> items )
+    public DeputyAccountCollection setItems( java.util.List<DeputyAccount> items )
     {
         this.items = items;
         return this;
     }
 
     @Override
-    public SubAccountCollection set( String fieldName, Object value )
+    public DeputyAccountCollection set( String fieldName, Object value )
     {
-        return ( SubAccountCollection ) super.set( fieldName, value );
+        return ( DeputyAccountCollection ) super.set( fieldName, value );
     }
 
     @Override
-    public SubAccountCollection clone()
+    public DeputyAccountCollection clone()
     {
-        return ( SubAccountCollection ) super.clone();
+        return ( DeputyAccountCollection ) super.clone();
     }
 
 }
